# opendf

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  opendf.kdev4  settings.cfg.in
MyGUI_Media/: Console.layout
cmake/: FindMyGUI.cmake  FindSDL2.cmake
components/archives/: archive.hpp  bsaarchive.cpp  bsaarchive.hpp
components/dfosg/: meshloader.cpp  meshloader.hpp  texloader.cpp  texloader.hpp
components/mygui_osg/: datamanager.cpp  datamanager.h  diagnostic.h  rendermanager.cpp  rendermanager.h  vertexbuffer.cpp
components/resource/: meshmanager.cpp  meshmanager.hpp  texturemanager.cpp  texturemanager.hpp
components/settings/: configfile.cpp
components/vfs/: manager.cpp  manager.hpp  osg_callbacks.cpp  osg_callbacks.hpp
data/shaders/: combiner.frag  combiner.vert  dir_light.frag  dir_light.vert  object.frag  object.vert  quad_rect.frag  quad_ui.frag  quad_ui.vert  sprite.frag  sprite.vert  terrain.frag  terrain.vert
misc/: sparsearray.hpp
src/: cvars.cpp  cvars.hpp  engine.cpp  engine.hpp  fnmatch.c  fnmatch.h  log.cpp  referenceable.hpp
src/bsatool/: bsatool.cpp
src/class/: door.cpp  door.hpp  linker.hpp  placeable.cpp  placeable.hpp
src/components/archives/: archive.hpp  bsaarchive.cpp
src/components/dfosg/: meshloader.cpp  meshloader.hpp  texloader.cpp  texloader.hpp
src/components/mygui_osg/: datamanager.cpp  datamanager.h  diagnostic.h  rendermanager.cpp  rendermanager.h  texture.cpp  texture.h  vertexbuffer.cpp  vertexbuffer.h
src/components/resource/: meshmanager.cpp  meshmanager.hpp  texturemanager.cpp  texturemanager.hpp
src/components/sdlutil/: graphicswindow.cpp  graphicswindow.hpp
src/components/settings/: configfile.cpp  configfile.hpp
src/components/vfs/: manager.cpp
src/gui/: gui.cpp  gui.hpp  iface.hpp
src/input/: input.cpp  input.hpp
src/misc/: sparsearray.hpp
src/opendf/: cvars.cpp  cvars.hpp  delegates.hpp  engine.cpp  engine.hpp  log.hpp  main.cpp
src/opendf/actions/: door.cpp  door.hpp  exitdoor.cpp  exitdoor.hpp  linker.cpp  linker.hpp  mover.cpp  mover.hpp  unknown.cpp  unknown.hpp
src/opendf/class/: activator.cpp  activator.hpp  animated.cpp  animated.hpp  door.cpp  door.hpp  exitdoor.cpp  exitdoor.hpp  linker.cpp  mover.cpp  mover.hpp  placeable.cpp  placeable.hpp
src/opendf/gui/: gui.cpp
src/opendf/input/: input.cpp
src/opendf/render/: pipeline.cpp  renderer.cpp  renderer.hpp  skybox.cpp  skybox.hpp
src/opendf/world/: dblocks.cpp  dblocks.hpp  ditems.cpp  iface.hpp  itembase.hpp  mblocks.cpp  mblocks.hpp  pitems.cpp  pitems.hpp  world.cpp  world.hpp
src/render/: pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp
src/world/: dblocks.cpp  dblocks.hpp  ditems.cpp  ditems.hpp  iface.hpp  itembase.hpp  mblocks.cpp  mblocks.hpp  pitems.cpp  pitems.hpp  world.cpp  world.hpp
tools/bsatool/: bsatool.cpp
